# ClangActiveObjectGenerator

./: .clang-format  ActiveObject.mustache  CMakeLists.txt  ClangActiveObject.cpp  LearnClangAst.cpp  README.md  clang-active-object-generator.sh  clang-active-object.sh
doc/: activeObject.puml
example/: CMakeLists.txt  ICalculator.h  ICalculator.hpp  ICalculatorActiveObject.h  IResultObserver.hpp  IResultObserverActiveObject.h  MakeActiveObject.h  main.cpp
src/: ActiveObject.mustache  ClangActiveObject.cpp  clang-active-object-generator
test/integration/: CMakeLists.txt  main.cpp
test/unit/: CMakeLists.txt  generate_and_compare_to_reference.sh
test/unit/activeObjectReferences/: ISimpleClass.h  ISimpleClass.hpp
test/unit/interfaces/: ISimpleClass.hpp
